# flatbuffers

./: README.md  flatbuffers.cabal  stack.yaml
cbits/includes/: flatbuffers_common_reader.h
cbits/includes/flatcc/: #flatcc_builderwrapper.h#  .#flatcc_builderwrapper.h  flatcc.hs  flatcc_builderwrapper.h  flatcc_identifier.h
src/Data/FlatBuffers/Internal/: Base.hsc  Builder.hsc  FlatBuffers.chs  Reader.hsc
