name:                flatbuffers
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/flatbuffers#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs: src
  default-language:    Haskell2010
  ghc-options: -Wall -O2 -fwarn-tabs -funbox-strict-fields
  include-dirs:
    cbits/includes
  exposed-modules:
                  Data.FlatBuffers.Internal.Reader
                  Data.FlatBuffers.Internal.Builder
  build-depends:
                base >= 4.7 && < 5
              , bytestring
